--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@vue/cli": "^4.0.5",
     "axios": "^0.19.0",
+    "bootstrap-vue": "^2.0.4",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-paginate": "^3.6.0",
     "vue-router": "^3.0.3",
     "vue-social-auth": "^1.4.1",
     "vuex": "^3.0.1"
