--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vue-paginate": "^3.6.0",
     "vue-router": "^3.0.3",
     "vue-social-auth": "^1.4.1",
+    "vue-sweetalert2": "^2.1.4",
+    "vue-toasted": "^1.1.27",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
