--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.4",
     "core-js": "^2.6.5",
+    "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-paginate": "^3.6.0",
