--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.4",
     "core-js": "^2.6.5",
+    "jquery": "^1.9.1",
     "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
@@ -20,6 +21,7 @@
     "vue-social-auth": "^1.4.1",
     "vue-sweetalert2": "^2.1.4",
     "vue-toasted": "^1.1.27",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -29,7 +31,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vue2-collapse": "^1.0.15"
   },
   "eslintConfig": {
     "root": true,
