--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VUE_APP_GOOGLE_ID=479206983965-lobq2kndhmb04mp1f5thp9ckvhks7h8j.apps.googleusercontent.com 
-VUE_APP_GOOGLE_URL=http://localhost:8080/about
+VUE_APP_GOOGLE_ID=632225845458-r9s1qfn6ta7e26gi6h00kh25qi0uk2f6.apps.googleusercontent.com 
+VUE_APP_GOOGLE_URL=http://localhost:8080
 VUE_APP_URL_API=http://localhost:8000/api
