--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.0.4",
     "core-js": "^2.6.5",
     "jquery": "^3.4.0",
+    "sweetalert2": "^9.3.5",
     "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
