--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-crypt": "^1.0.0",
     "vue-multiselect": "^2.1.6",
     "vue-paginate": "^3.6.0",
     "vue-router": "^3.0.3",
